Mapping campaigns to order links